# [tool.poetry]
# name = "app"
# version = "0.1.0"
# description = ""
# authors = ["Admin <admin@example.com>"]

# [tool.poetry.dependencies]
# python = "^3.7"
# uvicorn = "^0.11.3"
# fastapi = "^0.54.1"
# python-multipart = "^0.0.5"
# email-validator = "^1.0.5"
# requests = "^2.23.0"
# celery = "^4.4.2"
# passlib = {extras = ["bcrypt"], version = "^1.7.2"}
# tenacity = "^6.1.0"
# pydantic = "^1.4"
# emails = "^0.5.15"
# raven = "^6.10.0"
# gunicorn = "^20.0.4"
# jinja2 = "^2.11.2"
# psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
# # sqlalchemy = "^1.3.16"
# pytest = "^5.4.1"
# python-jose = {extras = ["cryptography"], version = "^3.1.0"}

# [tool.poetry.dev-dependencies]
# mypy = "^0.770"
# black = "^19.10b0"
# isort = "^4.3.21"
# autoflake = "^1.3.1"
# flake8 = "^3.7.9"
# pytest = "^5.4.1"
# sqlalchemy-stubs = "^0.3"
# pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy<1.0,>=0.770",
    "black<20.0,>=19.10b0",
    "isort<5.0.0,>=4.3.21",
    "autoflake<2.0.0,>=1.3.1",
    "flake8<4.0.0,>=3.7.9",
    "pytest<6.0.0,>=5.4.1",
    "sqlalchemy-stubs<1.0,>=0.3",
    "pytest-cov<3.0.0,>=2.8.1",
    "jupyter>=1.0.0",
    "notebook>=6.5.2",
    "markupsafe==2.0.1",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Admin", email = "admin@example.com"},
    {name = "Admin",email = "admin@example.com"},
]
requires-python = ">=3.7,<4.0"
dependencies = [
    "uvicorn<1.0.0,>=0.11.3",
    "fastapi<1.0.0,>=0.54.1",
    "python-multipart<1.0.0,>=0.0.5",
    "email-validator<2.0.0,>=1.0.5",
    "requests<3.0.0,>=2.23.0",
    "celery<5.0.0,>=4.4.2",
    "passlib[bcrypt]<2.0.0,>=1.7.2",
    "tenacity<7.0.0,>=6.1.0",
    "pydantic<2.0,>=1.4",
    "emails<1.0.0,>=0.5.15",
    "raven<7.0.0,>=6.10.0",
    "gunicorn<21.0.0,>=20.0.4",
    "jinja2<3.0.0,>=2.11.2",
    "psycopg2-binary<3.0.0,>=2.8.5",
    "alembic<2.0.0,>=1.4.2",
    "sqlalchemy<2.0.0,>=1.3.16",
    "pytest<6.0.0,>=5.4.1",
    "python-jose[cryptography]<4.0.0,>=3.1.0",
    "uvicorn<1.0.0,>=0.11.3",
    "fastapi<1.0.0,>=0.54.1",
    "python-multipart<1.0.0,>=0.0.5",
    "email-validator<2.0.0,>=1.0.5",
    "requests<3.0.0,>=2.23.0",
    "celery<5.0.0,>=4.4.2",
    "passlib[bcrypt]<2.0.0,>=1.7.2",
    "tenacity<7.0.0,>=6.1.0",
    "pydantic<2.0,>=1.4",
    "emails<1.0.0,>=0.5.15",
    "raven<7.0.0,>=6.10.0",
    "gunicorn<21.0.0,>=20.0.4",
    "jinja2<3.0.0,>=2.11.2",
    "psycopg2-binary<3.0.0,>=2.8.5",
    "alembic<2.0.0,>=1.4.2",
    "sqlalchemy<2.0.0,>=1.3.16",
    "pytest<6.0.0,>=5.4.1",
    "python-jose[cryptography]<4.0.0,>=3.1.0",
    "docker>=6.0.1",
    "ipykernel>=6.16.2",
    "black>=19.10b0",
    "pip>=22.3.1",
    "click==8.0.2",
    "python-dotenv>=0.21.0",
]
name = "app"
version = "0.1.0"
description = ""

[project.urls]

[project.optional-dependencies]
